test/types/range/enum/castEnumRange2.good
castEnumRange2.chpl:4: error: can't cast from an abstract enum ('color') to int(64)
